--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
 		"clsx": "^1.2.1",
+		"easymde": "^2.18.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.45.2",
+		"react-markdown": "^8.0.7",
 		"react-redux": "^8.1.1",
 		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.1",
+		"react-simplemde-editor": "^5.2.0",
 		"sass": "^1.64.1",
 		"web-vitals": "^2.1.4"
 	},
