--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
 	},
 	"dependencies": {
 		"bcrypt": "^5.1.0",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-bearer-token": "^2.4.0",
 		"express-validator": "^7.0.1",
